--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -1848,6 +1848,44 @@ references:
   isSpec: "True"
   fullName: CG.Business.Strategys.StrategyException.StrategyException
   nameWithType: StrategyException.StrategyException
+- uid: Microsoft.AspNetCore.Builder
+  name: Microsoft.AspNetCore.Builder
+  href: api/Microsoft.AspNetCore.Builder.html
+  commentId: N:Microsoft.AspNetCore.Builder
+  fullName: Microsoft.AspNetCore.Builder
+  nameWithType: Microsoft.AspNetCore.Builder
+- uid: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions
+  name: ApplicationBuilderExtensions
+  href: api/Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.html
+  commentId: T:Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions
+  fullName: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions
+  nameWithType: ApplicationBuilderExtensions
+- uid: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseRepositories(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment,System.String,System.String)
+  name: UseRepositories(IApplicationBuilder, IWebHostEnvironment, String, String)
+  href: api/Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.html#Microsoft_AspNetCore_Builder_ApplicationBuilderExtensions_UseRepositories_Microsoft_AspNetCore_Builder_IApplicationBuilder_Microsoft_AspNetCore_Hosting_IWebHostEnvironment_System_String_System_String_
+  commentId: M:Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseRepositories(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment,System.String,System.String)
+  fullName: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseRepositories(Microsoft.AspNetCore.Builder.IApplicationBuilder, Microsoft.AspNetCore.Hosting.IWebHostEnvironment, System.String, System.String)
+  nameWithType: ApplicationBuilderExtensions.UseRepositories(IApplicationBuilder, IWebHostEnvironment, String, String)
+- uid: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseRepositories*
+  name: UseRepositories
+  href: api/Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.html#Microsoft_AspNetCore_Builder_ApplicationBuilderExtensions_UseRepositories_
+  commentId: Overload:Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseRepositories
+  isSpec: "True"
+  fullName: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseRepositories
+  nameWithType: ApplicationBuilderExtensions.UseRepositories
+- uid: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseStrategies(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment,System.String,System.String)
+  name: UseStrategies(IApplicationBuilder, IWebHostEnvironment, String, String)
+  href: api/Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.html#Microsoft_AspNetCore_Builder_ApplicationBuilderExtensions_UseStrategies_Microsoft_AspNetCore_Builder_IApplicationBuilder_Microsoft_AspNetCore_Hosting_IWebHostEnvironment_System_String_System_String_
+  commentId: M:Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseStrategies(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment,System.String,System.String)
+  fullName: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseStrategies(Microsoft.AspNetCore.Builder.IApplicationBuilder, Microsoft.AspNetCore.Hosting.IWebHostEnvironment, System.String, System.String)
+  nameWithType: ApplicationBuilderExtensions.UseStrategies(IApplicationBuilder, IWebHostEnvironment, String, String)
+- uid: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseStrategies*
+  name: UseStrategies
+  href: api/Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.html#Microsoft_AspNetCore_Builder_ApplicationBuilderExtensions_UseStrategies_
+  commentId: Overload:Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseStrategies
+  isSpec: "True"
+  fullName: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseStrategies
+  nameWithType: ApplicationBuilderExtensions.UseStrategies
 - uid: Microsoft.Extensions.DependencyInjection
   name: Microsoft.Extensions.DependencyInjection
   href: api/Microsoft.Extensions.DependencyInjection.html
