--- a/src/CG.Business/CG.Business.csproj
+++ b/src/CG.Business/CG.Business.csproj
@@ -25,8 +25,9 @@ Platforms supported:
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CG.Configuration" Version="2021.1.2" />
     <PackageReference Include="CG.Core" Version="2021.1.1" />
-    <PackageReference Include="CG.Options" Version="2021.1.1" />
+    <PackageReference Include="CG.Options" Version="2021.1.2" />
     <PackageReference Include="CG.Reflection" Version="2021.1.1" />
     <PackageReference Include="Nerdbank.GitVersioning" Version="3.3.37">
       <PrivateAssets>all</PrivateAssets>
