CI Updates [skip ci]

--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -1016,12 +1016,12 @@ references:
   commentId: T:Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions
   fullName: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions
   nameWithType: ApplicationBuilderExtensions
-- uid: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseRepositories(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment,System.String,System.String)
-  name: UseRepositories(IApplicationBuilder, IWebHostEnvironment, String, String)
-  href: api/Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.html#Microsoft_AspNetCore_Builder_ApplicationBuilderExtensions_UseRepositories_Microsoft_AspNetCore_Builder_IApplicationBuilder_Microsoft_AspNetCore_Hosting_IWebHostEnvironment_System_String_System_String_
-  commentId: M:Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseRepositories(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment,System.String,System.String)
-  fullName: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseRepositories(Microsoft.AspNetCore.Builder.IApplicationBuilder, Microsoft.AspNetCore.Hosting.IWebHostEnvironment, System.String, System.String)
-  nameWithType: ApplicationBuilderExtensions.UseRepositories(IApplicationBuilder, IWebHostEnvironment, String, String)
+- uid: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseRepositories(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment,System.String,System.String,System.String)
+  name: UseRepositories(IApplicationBuilder, IWebHostEnvironment, String, String, String)
+  href: api/Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.html#Microsoft_AspNetCore_Builder_ApplicationBuilderExtensions_UseRepositories_Microsoft_AspNetCore_Builder_IApplicationBuilder_Microsoft_AspNetCore_Hosting_IWebHostEnvironment_System_String_System_String_System_String_
+  commentId: M:Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseRepositories(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment,System.String,System.String,System.String)
+  fullName: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseRepositories(Microsoft.AspNetCore.Builder.IApplicationBuilder, Microsoft.AspNetCore.Hosting.IWebHostEnvironment, System.String, System.String, System.String)
+  nameWithType: ApplicationBuilderExtensions.UseRepositories(IApplicationBuilder, IWebHostEnvironment, String, String, String)
 - uid: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseRepositories*
   name: UseRepositories
   href: api/Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.html#Microsoft_AspNetCore_Builder_ApplicationBuilderExtensions_UseRepositories_
@@ -1029,12 +1029,12 @@ references:
   isSpec: "True"
   fullName: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseRepositories
   nameWithType: ApplicationBuilderExtensions.UseRepositories
-- uid: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseStrategies(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment,System.String,System.String)
-  name: UseStrategies(IApplicationBuilder, IWebHostEnvironment, String, String)
-  href: api/Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.html#Microsoft_AspNetCore_Builder_ApplicationBuilderExtensions_UseStrategies_Microsoft_AspNetCore_Builder_IApplicationBuilder_Microsoft_AspNetCore_Hosting_IWebHostEnvironment_System_String_System_String_
-  commentId: M:Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseStrategies(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment,System.String,System.String)
-  fullName: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseStrategies(Microsoft.AspNetCore.Builder.IApplicationBuilder, Microsoft.AspNetCore.Hosting.IWebHostEnvironment, System.String, System.String)
-  nameWithType: ApplicationBuilderExtensions.UseStrategies(IApplicationBuilder, IWebHostEnvironment, String, String)
+- uid: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseStrategies(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment,System.String,System.String,System.String)
+  name: UseStrategies(IApplicationBuilder, IWebHostEnvironment, String, String, String)
+  href: api/Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.html#Microsoft_AspNetCore_Builder_ApplicationBuilderExtensions_UseStrategies_Microsoft_AspNetCore_Builder_IApplicationBuilder_Microsoft_AspNetCore_Hosting_IWebHostEnvironment_System_String_System_String_System_String_
+  commentId: M:Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseStrategies(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment,System.String,System.String,System.String)
+  fullName: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseStrategies(Microsoft.AspNetCore.Builder.IApplicationBuilder, Microsoft.AspNetCore.Hosting.IWebHostEnvironment, System.String, System.String, System.String)
+  nameWithType: ApplicationBuilderExtensions.UseStrategies(IApplicationBuilder, IWebHostEnvironment, String, String, String)
 - uid: Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.UseStrategies*
   name: UseStrategies
   href: api/Microsoft.AspNetCore.Builder.ApplicationBuilderExtensions.html#Microsoft_AspNetCore_Builder_ApplicationBuilderExtensions_UseStrategies_
@@ -1067,24 +1067,6 @@ references:
   isSpec: "True"
   fullName: Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.AddRepositories
   nameWithType: ServiceCollectionExtensions.AddRepositories
-- uid: Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.AddRepositories``1(Microsoft.Extensions.DependencyInjection.IServiceCollection,Microsoft.Extensions.Configuration.IConfiguration,System.String,System.String)
-  name: AddRepositories<TBuilder>(IServiceCollection, IConfiguration, String, String)
-  href: api/Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.html#Microsoft_Extensions_DependencyInjection_ServiceCollectionExtensions_AddRepositories__1_Microsoft_Extensions_DependencyInjection_IServiceCollection_Microsoft_Extensions_Configuration_IConfiguration_System_String_System_String_
-  commentId: M:Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.AddRepositories``1(Microsoft.Extensions.DependencyInjection.IServiceCollection,Microsoft.Extensions.Configuration.IConfiguration,System.String,System.String)
-  name.vb: AddRepositories(Of TBuilder)(IServiceCollection, IConfiguration, String, String)
-  fullName: Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.AddRepositories<TBuilder>(Microsoft.Extensions.DependencyInjection.IServiceCollection, Microsoft.Extensions.Configuration.IConfiguration, System.String, System.String)
-  fullName.vb: Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.AddRepositories(Of TBuilder)(Microsoft.Extensions.DependencyInjection.IServiceCollection, Microsoft.Extensions.Configuration.IConfiguration, System.String, System.String)
-  nameWithType: ServiceCollectionExtensions.AddRepositories<TBuilder>(IServiceCollection, IConfiguration, String, String)
-  nameWithType.vb: ServiceCollectionExtensions.AddRepositories(Of TBuilder)(IServiceCollection, IConfiguration, String, String)
-- uid: Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.AddRepositories``2(Microsoft.Extensions.DependencyInjection.IServiceCollection,Microsoft.Extensions.Configuration.IConfiguration,System.String,System.String)
-  name: AddRepositories<TModel, TKey>(IServiceCollection, IConfiguration, String, String)
-  href: api/Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.html#Microsoft_Extensions_DependencyInjection_ServiceCollectionExtensions_AddRepositories__2_Microsoft_Extensions_DependencyInjection_IServiceCollection_Microsoft_Extensions_Configuration_IConfiguration_System_String_System_String_
-  commentId: M:Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.AddRepositories``2(Microsoft.Extensions.DependencyInjection.IServiceCollection,Microsoft.Extensions.Configuration.IConfiguration,System.String,System.String)
-  name.vb: AddRepositories(Of TModel, TKey)(IServiceCollection, IConfiguration, String, String)
-  fullName: Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.AddRepositories<TModel, TKey>(Microsoft.Extensions.DependencyInjection.IServiceCollection, Microsoft.Extensions.Configuration.IConfiguration, System.String, System.String)
-  fullName.vb: Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.AddRepositories(Of TModel, TKey)(Microsoft.Extensions.DependencyInjection.IServiceCollection, Microsoft.Extensions.Configuration.IConfiguration, System.String, System.String)
-  nameWithType: ServiceCollectionExtensions.AddRepositories<TModel, TKey>(IServiceCollection, IConfiguration, String, String)
-  nameWithType.vb: ServiceCollectionExtensions.AddRepositories(Of TModel, TKey)(IServiceCollection, IConfiguration, String, String)
 - uid: Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.AddStrategies(Microsoft.Extensions.DependencyInjection.IServiceCollection,Microsoft.Extensions.Configuration.IConfiguration,System.String,System.String)
   name: AddStrategies(IServiceCollection, IConfiguration, String, String)
   href: api/Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.html#Microsoft_Extensions_DependencyInjection_ServiceCollectionExtensions_AddStrategies_Microsoft_Extensions_DependencyInjection_IServiceCollection_Microsoft_Extensions_Configuration_IConfiguration_System_String_System_String_
@@ -1098,12 +1080,3 @@ references:
   isSpec: "True"
   fullName: Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.AddStrategies
   nameWithType: ServiceCollectionExtensions.AddStrategies
-- uid: Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.AddStrategies``1(Microsoft.Extensions.DependencyInjection.IServiceCollection,Microsoft.Extensions.Configuration.IConfiguration,System.String,System.String)
-  name: AddStrategies<TBuilder>(IServiceCollection, IConfiguration, String, String)
-  href: api/Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.html#Microsoft_Extensions_DependencyInjection_ServiceCollectionExtensions_AddStrategies__1_Microsoft_Extensions_DependencyInjection_IServiceCollection_Microsoft_Extensions_Configuration_IConfiguration_System_String_System_String_
-  commentId: M:Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.AddStrategies``1(Microsoft.Extensions.DependencyInjection.IServiceCollection,Microsoft.Extensions.Configuration.IConfiguration,System.String,System.String)
-  name.vb: AddStrategies(Of TBuilder)(IServiceCollection, IConfiguration, String, String)
-  fullName: Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.AddStrategies<TBuilder>(Microsoft.Extensions.DependencyInjection.IServiceCollection, Microsoft.Extensions.Configuration.IConfiguration, System.String, System.String)
-  fullName.vb: Microsoft.Extensions.DependencyInjection.ServiceCollectionExtensions.AddStrategies(Of TBuilder)(Microsoft.Extensions.DependencyInjection.IServiceCollection, Microsoft.Extensions.Configuration.IConfiguration, System.String, System.String)
-  nameWithType: ServiceCollectionExtensions.AddStrategies<TBuilder>(IServiceCollection, IConfiguration, String, String)
-  nameWithType.vb: ServiceCollectionExtensions.AddStrategies(Of TBuilder)(IServiceCollection, IConfiguration, String, String)
