I moved the generic model types to CG.Linq
I added service lifetime to the LoaderOptions class, and I now pass that hint down, during registration, so all parts of a service apply the same lifetime rules.

--- a/samples/CG.Business.QuickStart/appSettings.json
+++ b/samples/CG.Business.QuickStart/appSettings.json
@@ -1,12 +1,11 @@
 {
   "Repositories": {
-    "Strategy": "Test",
+    "Name": "Test",
+    "AssemblyNameOrPath": "",
+    "ServiceLifetime": "Transient",
     "Test": {
-      "ApplyMigrations": false,
-      "DropDatabase": true,
-      "EnsureCreated": true,
-      "SeedDatabase": true,
-      "ConnectionString": "Server=.;Database=Blah;Trusted_Connection=True;MultipleActiveResultSets=true"
-    }    
+      "A": "1",
+      "B":  "2"
+    }
   }
 }
