--- a/src/CG.Business/CG.Business.csproj
+++ b/src/CG.Business/CG.Business.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>CG.Business</RootNamespace>
     <Description>This package contains business related abstractions used by other CodeGator packages. 
 
 Platforms supported:
-      .NET Core 3.1 or above</Description>
+      .NET 5.x or above</Description>
     <Company>CodeGator</Company>
     <Authors>Martin Cook</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -21,19 +21,19 @@ Platforms supported:
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netcoreapp3.1\CG.Business.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\net5.0\CG.Business.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CG.Configuration" Version="2021.1.3" />
-    <PackageReference Include="CG.Core" Version="2021.1.2" />
-    <PackageReference Include="CG.Options" Version="2021.1.3" />
-    <PackageReference Include="CG.Reflection" Version="2021.1.2" />
-    <PackageReference Include="Nerdbank.GitVersioning" Version="3.3.37">
+    <PackageReference Include="CG.Core" Version="2021.2.4" />
+    <PackageReference Include="CG.Options" Version="2021.4.1" />
+    <PackageReference Include="CG.Reflection" Version="2021.2.1" />
+    <PackageReference Include="Nerdbank.GitVersioning" Version="3.4.194">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="System.Text.Json" Version="5.0.1" />
+    <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
